--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -5,8 +5,8 @@
 <div class="page-box">
 
     <!-- Title and background image -->
-    <div class="content-title">{{trackName}}</div>
-    <div class="content-background-image">
+    <div class="movie-title">{{trackName}}</div>
+    <div class="movie-background-image">
         <img src="url(../../img/movie-tvShow-content/background-movie.png">
     </div>
 
@@ -24,9 +24,9 @@
             </div>
 
             <div class="main-info">
-                <div class="content-length">{{convertDuration}}</div>
-                <div class="content-year">{{releaseYear}}</div>
-                <div class="content-country">{{country}}</div>
+                <div class="movie-length">{{convertDuration}}</div>
+                <div class="movie-year">{{releaseYear}}</div>
+                <div class="movie-country">{{country}}</div>
             </div>
         </div>
 
@@ -46,37 +46,37 @@
 
         <div class="detailed-info">
             <div class="detailed-info-subject">
-                <span class="content-name icon"></span>
+                <span class="movie-name movie-icon"></span>
                 <span>Title: </span>
                 {{trackName}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-rating icon"></span>
+                <span class="movie-rating movie-icon"></span>
                 <span>Rating: </span>
                 Rated {{contentAdvisoryRating}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-director icon"></span>
+                <span class="movie-director movie-icon"></span>
                 <span>Director: </span>
                 {{artistName}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-studio icon"></span>
+                <span class="movie-studio movie-icon"></span>
                 <span>Studio: </span>
                 {{productionHouse}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-writers icon"></span>
+                <span class="movie-writers movie-icon"></span>
                 <span>Writer: </span>
                 {{writers}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-language icon"></span>
+                <span class="movie-language movie-icon"></span>
                 <span>Language: </span>
                 {{language}}
             </div>
             <div class="detailed-info-subject">
-                <span class="content-price icon"></span>
+                <span class="movie-price movie-icon"></span>
                 <span>Price: </span>
                 {{trackPrice}} {{currency}}
             </div>
