--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -31,9 +31,9 @@
                 <img src="{{artworkUrl100}}"/>
                 <div>
                     {{#if trackName}}
-                    <title>{{trackName}}</title>
+                    <span>{{trackName}}</span>
                     {{else}}
-                    <title>{{collectionName}}</title>
+                    <span>{{collectionName}}</span>
                     {{/if}}
                     <span>{{primaryGenreName}}</span>
                 </div>
