--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -134,4 +134,9 @@
         </div>
     </div>
 
+    <!-- Episodes box -->
+    <div class="tvShow-episodes-box">
+        <span>Episodes</span>
+    </div>
+
 </div>
