Add Handlebars exception for the episodes box html

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -135,8 +135,10 @@
     </div>
 
     <!-- Episodes box -->
+    {{#if collectionName}}
     <div class="tvShow-episodes-box">
         <span>Episodes</span>
     </div>
+    {{/if}}
 
 </div>
