--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -135,8 +135,10 @@
     </div>
 
     <!-- Episodes box -->
+    {{#if collectionName}}
     <div class="tvShow-episodes-box">
         <span>Episodes</span>
     </div>
+    {{/if}}
 
 </div>
