Adds a remove movie for each watchlist

--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -38,8 +38,10 @@
                         </div>
                     </div>
                 </a>
+
             </div>
             {{/each}}
+            <button class="remove-watchlist-movie delete-btn btn" data-id="{{id}}">Remove Movies</button>
         </div>
     </div>
 </div>
