--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -137,7 +137,7 @@
     <!-- Episodes box -->
     {{#if collectionName}}
     <div class="tvShow-episodes-box">
-        <span>Episodes</span>
+        <span>Episodes: </span>
     </div>
     {{/if}}
 
