Adds an edit button along with the double click for the edit watchlists

--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -6,6 +6,7 @@
     <div class="watchlist-aside">
         <div class="watchlist-title-box" data-id="{{id}}">
             <h4 class="watchlist-title">{{name}}</h4>
+            <button class="watchlist-edit-button btn submit-btn" type="button">Edit</button>
         </div>
 
         <div class="watchlist-movies">
