--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -79,6 +79,11 @@
     margin-bottom: 1.3em;
 }
 
+.watchlist-edit-button {
+    margin-left: 1em;
+    height: 20px;
+}
+
 /* Taken from: http://codepen.io/MarvinVk/pen/GEjio */
 
 .watchlist-cancel {
@@ -187,6 +192,10 @@
         display: flex;
         flex-direction: column;
         border: none;
+    }
+
+    .watchlist-edit-button {
+        display: none;
     }
     
     .watchlist-movie-select-box {
