--- a/js/templates/actorThumbnail.html
+++ b/js/templates/actorThumbnail.html
@@ -1,5 +1,7 @@
 <div class="actorThumbnail">
-    <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}">
+    <div id="idTmpImg" class="imageThumbnail"></div>
+
+   <!-- <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}"> -->
 
 
     <div class="descriptionThumbnail">
