--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,6 +1,5 @@
-<!-- name = Movie, collectionName = tvShow -->
 <head>
-    {{#if name}}
+    {{#if isMovieType}}
     <title>{{name}}</title>
     {{else}}
     <title>{{collectionName}}</title>
@@ -10,7 +9,7 @@
 <div class="page-box">
 
     <!-- Title and background image -->
-    {{#if trackName}}
+    {{#if isMovieType}}
     <div class="movie-title">{{trackName}}</div>
     <div class="movie-background-image">
         <img src="url(../../img/movie-tvShow-content/background-movie.png">
@@ -30,21 +29,23 @@
             <div class="cover-thumbnail">
                 <img src="{{artworkUrl100}}"/>
                 <div>
-                    {{#if trackName}}
+                    {{#if isMovieType}}
                     <span>{{trackName}}</span>
                     {{else}}
                     <span>{{collectionName}}</span>
                     {{/if}}
+
                     <span>{{primaryGenreName}}</span>
                 </div>
             </div>
 
             <div class="main-info">
-                {{#if convertDuration}}
+                {{#if isMovieType}}
                 <div class="movie-length">{{convertDuration}}</div>
                 {{else}}
                 <div class="movie-length">{{trackCount}} episodes</div>
                 {{/if}}
+
                 <div class="movie-year">{{releaseYear}}</div>
                 <div class="movie-country">{{country}}</div>
             </div>
@@ -67,7 +68,7 @@
         <div class="detailed-info">
             <div class="detailed-info-subject">
                 <span class="movie-name movie-icon"></span>
-                {{#if trackName}}
+                {{#if isMovieType}}
                 <span>Title: </span>
                 {{trackName}}
                 {{else}}
@@ -82,7 +83,7 @@
             </div>
             <div class="detailed-info-subject">
                 <span class="movie-director movie-icon"></span>
-                {{#if artistName}}
+                {{#if isMovieType}}
                 <span>Director: </span>
                 {{artistName}}
                 {{else}}
@@ -108,10 +109,10 @@
             <div class="detailed-info-subject">
                 <span class="movie-price movie-icon"></span>
                 <span>Price: </span>
-                {{#if collectionPrice}}
-                {{collectionPrice}} {{currency}}
-                {{else}}
+                {{#if isMovieType}}
                 {{trackPrice}} {{currency}}
+                {{else}}
+                {{collectionPrice}} {{currency}}
                 {{/if}}
             </div>
         </div>
@@ -135,10 +136,10 @@
     </div>
 
     <!-- Episodes box -->
-    {{#if collectionName}}
+    {{#unless isMovieType}}
     <div class="tvShow-episodes-box">
         <span>Episodes: </span>
     </div>
-    {{/if}}
+    {{/unless}}
 
 </div>
