Reunite all thumbnail views and templates in one

--- a/css/movies-seasons.css
+++ b/css/movies-seasons.css
@@ -87,6 +87,7 @@
 }
 
 @media screen and (min-width: 970px) {
+    /* Different */
     .movies-box {
         margin-left: auto;
         margin-right: auto;
