--- a/css/episodes.css
+++ b/css/episodes.css
@@ -88,6 +88,7 @@
 }
 
 @media screen and (min-width: 970px) {
+    /* Different */
     .episode-thumbnail-box{
         font-family: "Open Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
         background-color: #171717;
